bynkc/tests/fixtures/positive/193_fn_type_param_passthrough/input.bynk
commons pipeline

fn pass(f: Int -> Int) -> Int -> Int {
  f
}

fn run(f: Int -> Effect[Int]) -> Int -> Effect[Int] {
  f
}
