bynkc/tests/fixtures/negative/176_type_args_on_method/input.bynk
commons bad {
  fn f(xs: List[Int]) -> Int {
    xs.length[Int]()
  }
}
